# semanticseek

./: README.md  install.sh  pyproject.toml
semanticseek/: __init__.py  indexer.py  main.py  searcher.py  store.py
